# DQR

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  example-number-2.json  example-short-name.json  example-valid.json  performance_and_deployment.txt  project_analysis.txt  rules.csv  setup-dqr.sh  system-diagram.mermaid  test-api.sh  test-applicant-rules.sh  test-conditional-rule.sh  test-debug.sh  test-specific-rule.sh  test-validation.sh
examples/: README.md  api-examples.sh  invalid-name-length.json  invalid-request.json  test_multiple_validations.json  valid-name-length.json  valid-request.json
examples/api/: README.md  api-reference.md  api-usage.sh  create-rule-enum.json  create-rule-length.json  create-rule-max.json  create-rule-min.json  create-rule-regex.json  create-rule-required.json  run-examples.sh  validation-request.json
examples/basic/: invalid-request.json  valid-request.json
examples/conditionals/: README.md  over-18-example.json  test-conditionals.sh  test-min-value.sh  under-18-example.json  user-payment-example.json
examples/dependencies/: README.md  depends-on-example.json  depends-on-unemployed.json  test-depends-on.sh
examples/journeys/: README.md  onboarding-complete.json  onboarding-empty-first.json  test-journey-validation.sh  validation-check-complete.json  (+1 more)
rules/: README.md  default.csv  default.csv.tmp
src/: api.rs  error.rs  lib.rs  main.rs  models.rs  rules.rs  validation.rs  validation_test.rs
test_cases/: test-api.sh  test-batch.sh  test-name-length.sh  test-rules-api.sh  test-validation.sh  valid_v4_sample.json
(+11 files in other folders)
