[workspace]
members = [
    "."
]

[package]
name = "dqr"
version = "0.1.0"
edition = "2021"
description = "JSON Validation API with configurable rules"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.2"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
jsonpath_lib = "0.3"
regex = "1.10.3"
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"
